# EQ2Lexicon

./: .env.example  .gitignore  .pip-audit-ignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  litestream.yml  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
alloy/: Dockerfile
backend/: db_catalogue.py  db_helpers.py  sql_loader.py
backend/bot/: bot.py
backend/census/: _coerce.py  client.py  config.py  constants.py  item_level.py  item_parser.py  models.py  store.py  store.sql
backend/core/: log_safety.py  logging_config.py
backend/eq2db/: _catalogue.py  _meta.py  _meta.sql  aas.py  aas.sql  classes.py  classes.sql  items.py  items.sql  raids.py  raids.sql  raids_act.py  recipes.py  recipes.sql  spells.py  spells.sql  zones.py  zones.sql
backend/image/: aa_tree.py  tooltip.py
backend/server/: app.py  app.sql  auth_deps.py  cache.py  census_events.py  census_health.py  census_refresh.py  config.py  constants.py  guild_cache.py  limiter.py  metrics.py  metrics.sql  raid_live.py  server_context.py
bot/: bot.py
bot/cogs/: aacheck.py  guild.py  items.py  spellcheck.py
census/: census_store.py  classes_db.py  client.py  config.py  constants.py  db.py  item_level.py  item_parser.py  models.py  raids_db.py  recipes_db.py  spells_db.py  wikitext_md.py  zones_db.py
data/: gear_rating.json  twitch_blocklist.json  word_blocklist.json
data/AAs/: aa_limits.json  aas.db  index.json
data/classes/: classes.db
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  formatters.test.ts  formatters.ts  historyTrace.test.ts  historyTrace.ts  index.css  main.tsx  spellConstants.ts  useClasses.ts
image/: aa_tree.py  tooltip.py
ops/alloy/: config.alloy  railway.toml
parses/: act_reader.py  db.py  ingest.py  models.py
scripts/: README.md  _debug_character.py  analyse_schema.py  backfill_item_levels.py  backfill_item_stats.py  backfill_new_columns.py  backfill_recipe_levels.py  backfill_spell_armor_fields.py  backfill_spell_effects.py  backfill_tier_display.py  build_aas_db.py  build_classes_db.py  build_recipe_classes.py  build_zones_db.py  dev_backend.ps1  dev_frontend.ps1  download_aa_icons.py  download_aa_trees.py  download_class_icons.py  download_items.py  download_recipes.py  download_spells.py  inspect_item.py  migrate_drop_redundant_json.py  migrate_spells.py  preview_aa_tree.py  preview_aacheck.py  preview_guild.py  preview_item.py  preview_spellcheck.py  start.ps1
scripts/dev/: Menludiir_templar_dps.aa  _artifact_check.py  _check_expansion.py  _dupe_names.py  _field_samples.py  _order_check.py  _smoke_test_zones.py  _smoke_test_zones_db.py  _stat_dupes.py  _test_api_request.py  _test_classification.py  _test_item_search.py  _test_max_level.py  _tier_eof.py  apply_polish.py  apply_rebalance.py  apply_zone_overviews.py  (+16 more)
tests/: conftest.py  test_db_helpers.py  test_sql_loader.py
web/: app.py  auth_deps.py  cache.py  census_health.py  census_refresh.py  config.py  db.py  guild_cache.py  metrics.py  server_context.py
(+628 files in other folders)
