[project]
name = "eq2lexicon"
version = "0.1.0"
description = "Discord bot and web companion site for the EverQuest 2 Daybreak Census API"
requires-python = ">=3.13"
dependencies = [
    # Bot / shared
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
    # IANA timezone database — Python's zoneinfo has no bundled tz data on
    # Windows (and minimal containers), so available_timezones()/ZoneInfo need
    # this for the raid-schedule timezone validation + live-window checks to
    # work cross-platform.
    "tzdata>=2024.1",
    # Observability
    "prometheus-client>=0.20.0",
    # Reference-data pipeline: parse MediaWiki wikitext from EQ2i for the
    # raid-strategies feature. Used by scripts/dev/scrape_eq2i_raids.py
    # and backend/census/wikitext_md.py (the wikitext→markdown converter).
    "mwparserfromhell>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[tool.uv]
# This is an application, not a library — don't try to build/install the
# project itself, just resolve and install its dependencies.
package = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
# Black-compatible defaults; double quotes, 4-space indent
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "F",   # pyflakes: undefined names, unused imports, redefined variables
    "I",   # isort: import ordering
    "E",   # pycodestyle errors (syntax-level, not style nits)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade: modernise syntax for Python 3.13
]
ignore = [
    "E501",  # line too long — handled by ruff format (line-length = 120)
]

[tool.ruff.lint.per-file-ignores]
# Scripts are standalone CLI tools; unused imports and broad rules are expected.
"scripts/*" = ["F", "E", "W", "UP"]
# Tests use wildcard imports and fixture magic that confuse pyflakes, and
# co-locate imports next to the helpers/classes that exercise them.
"tests/*" = ["F401", "F811", "E402"]
# backend/server/app.py must call load_dotenv() before importing other project
# modules so that env vars are available at import time.
"backend/server/app.py" = ["E402"]

[tool.pytest.ini_options]
log_level = "WARNING"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["backend"]
# backend/image/ is excluded because pyright trips over PIL global-cache
# patterns (loaded-once-then-reused module-level Optional[Image]); preserves
# the prior policy where image/ was a top-level exclude.
exclude = ["scripts", "data", "frontend", "ops", "docs", "backend/image", "**/__pycache__"]
# Third-party stubs (aiohttp, discord.py, etc.) are often missing — suppress
# the noise so only real type errors block the push.
reportMissingModuleSource = false
reportMissingImports = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
